Improve API spec
