# apiserver/model_configuration.go
@@ -9,18 +9,42 @@
 
 package apiserver
 
-// Configuration - Simply a example configuration
+// Configuration - Each configuration defines access to provider's API.
 type Configuration struct {
 
-	// A id identifying the example configuration
+	// Internal identifier for the configured API (created automatically).
 	Id *int64 `json:"id,omitempty"`
 
-	// Configuration data for example
-	Config string `json:"config,omitempty"`
+	// IP or hostname of the API
+	ApiAddress string `json:"apiAddress,omitempty"`
+
+	// API key
+	ApiKey string `json:"apiKey,omitempty"`
+
+	// Flag to enable or disable fetching from this API
+	Enable *bool `json:"enable,omitempty"`
+
+	// Interval in seconds for collecting data from API
+	RefreshInterval int32 `json:"refreshInterval,omitempty"`
+
+	// Timeout in seconds
+	RequestTimeout *int32 `json:"requestTimeout,omitempty"`
+
+	// Array of rules combined by logical OR
+	AssetFilter [][]FilterRule `json:"assetFilter,omitempty"`
+
+	// Set to `true` by the app when running and to `false` when app is stopped
+	Active *bool `json:"active,omitempty"`
+
+	// List of Eliona project ids for which this device should collect data. For each project id all smart devices are automatically created as an asset in Eliona. The mapping between Eliona is stored as an asset mapping in the KentixONE app.
+	ProjectIDs *[]string `json:"projectIDs,omitempty"`
 }
 
 // AssertConfigurationRequired checks if the required fields are not zero-ed
 func AssertConfigurationRequired(obj Configuration) error {
+	if err := AssertRecurseFilterRuleRequired(obj.AssetFilter); err != nil {
+		return err
+	}
 	return nil
 }
 
