# openapi.yaml
@@ -27,7 +27,7 @@ servers:
 
 tags:
   - name: Configuration
-    description: Configuration stuff for app template
+    description: Configure the app
     externalDocs:
       url: https://github.com/eliona-smart-building-assistant/app-template
 
@@ -37,7 +37,7 @@ tags:
       url: https://github.com/eliona-smart-building-assistant/app-template
 
   - name: Customization
-    description: Help to customize Eliona
+    description: Help to customize Eliona environment
     externalDocs:
       url: https://github.com/eliona-smart-building-assistant/app-template
 
@@ -46,36 +46,36 @@ paths:
     get:
       tags:
         - Configuration
-      summary: Get example configurations
-      description: Gets information about configurations.
+      summary: Get configurations
+      description: Gets information about all configurations.
       operationId: getConfigurations
       responses:
         "200":
-          description: Successfully returned example configurations
+          description: Successfully returned all configurations
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Configuration'
+                  $ref: "#/components/schemas/Configuration"
     post:
       tags:
         - Configuration
-      summary: Creates an example configuration
-      description: Creates an example configuration.
+      summary: Creates a configuration
+      description: Creates a configuration.
       operationId: postConfiguration
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Configuration'
+              $ref: "#/components/schemas/Configuration"
       responses:
         "201":
-          description: Successfully created an example configuration
+          description: Successfully created a configuration
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Configuration'
+                $ref: "#/components/schemas/Configuration"
 
   /version:
     get:
@@ -91,7 +91,6 @@ paths:
             application/json:
               schema:
                 type: object
-
 
   /version/openapi.json:
     get:
@@ -139,23 +138,84 @@ paths:
           content:
             application/json:
               schema:
-                $ref: 'https://raw.githubusercontent.com/eliona-smart-building-assistant/eliona-api/main/openapi.yaml#/components/schemas/Dashboard'
+                $ref: "https://raw.githubusercontent.com/eliona-smart-building-assistant/eliona-api/main/openapi.yaml#/components/schemas/Dashboard"
         404:
           description: Template name not found
 
 components:
   schemas:
-
     Configuration:
       type: object
-      description: Simply a example configuration
+      description: Each configuration defines access to provider's API.
       properties:
         id:
           type: integer
           format: int64
-          description: A id identifying the example configuration
+          description: Internal identifier for the configured API (created automatically).
           readOnly: true
           nullable: true
-        config:
+        apiAddress:
           type: string
-          description: Configuration data for example
+          format: string
+          description: IP or hostname of the API
+          example: 10.10.10.101
+        apiKey:
+          type: string
+          description: API key
+        enable:
+          type: boolean
+          description: Flag to enable or disable fetching from this API
+          default: true
+          nullable: true
+        refreshInterval:
+          type: integer
+          description: Interval in seconds for collecting data from API
+          default: 60
+        requestTimeout:
+          type: integer
+          description: Timeout in seconds
+          default: 120
+          nullable: true
+        assetFilter:
+          $ref: "#/components/schemas/AssetFilter"
+          nullable: true
+          example:
+            [
+              [{ "parameter": "deviceName", "regex": "Main.*" }, { "parameter": "deviceType", "regex": "110" }],
+              [{ "parameter": "macAddress", "regex": "(70:82:0e:12:28:cc|70:56:06:12:.*)" }],
+              [{ "parameter": "ipAddress", "regex": "192\\.168\\..*" }],
+            ]
+        active:
+          type: boolean
+          readOnly: true
+          description: Set to `true` by the app when running and to `false` when app is stopped
+          nullable: true
+        projectIDs:
+          type: array
+          description: List of Eliona project ids for which this device should collect data. For each project id all smart devices are automatically created as an asset in Eliona. The mapping between Eliona is stored as an asset mapping in the KentixONE app.
+          nullable: true
+          items:
+            type: string
+          example:
+            - "42"
+            - "99"
+
+    AssetFilter:
+      type: array
+      description: Array of rules combined by logical OR
+      items:
+        type: array
+        description: Array of rules combined by logical AND
+        items:
+          $ref: "#/components/schemas/FilterRule"
+
+    FilterRule:
+      type: object
+      description: Asset selection rule. Possible parameters are defined in app's README file.
+      properties:
+        parameter:
+          type: string
+          example: "name"
+        regex:
+          type: string
+          example: "^first_floor_.*$"
